Fixed issue 37943: Removed newInstance() deprecation warnings.
Class.newInstance() is deprecated from JDK 9. It is replaced by Class.getDeclaredConstructor().newInstance(),
but it has the drawback that this call throws an instance of ReflectiveOperationException that must be taken
into account.