@@ -1,6 +1,6 @@
 /*
  ************************************************************************************
- * Copyright (C) 2001-2016 Openbravo S.L.U.
+ * Copyright (C) 2001-2018 Openbravo S.L.U.
  * Licensed under the Apache Software License version 2.0
  * You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
  * Unless required by applicable law or agreed to  in writing,  software  distributed
@@ -645,7 +645,7 @@ public class HttpBaseServlet extends HttpServlet implements ConnectionProvider {
       parserClassName = "org.apache.xerces.parsers.SAXParser";
     }
     try {
-      return (XMLReader) Class.forName(parserClassName).newInstance();
+      return (XMLReader) Class.forName(parserClassName).getDeclaredConstructor().newInstance();
     } catch (Exception e) {
       throw new ServletException(e);
     }
