@@ -1,6 +1,6 @@
 /*
  ************************************************************************************
- * Copyright (C) 2010-2015 Openbravo S.L.U.
+ * Copyright (C) 2010-2018 Openbravo S.L.U.
  * Licensed under the Apache Software License version 2.0
  * You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
  * Unless required by applicable law or agreed to  in writing,  software  distributed
@@ -60,7 +60,7 @@ public class ModuleScriptHandler extends Task {
       try {
         Class<?> myClass = Class.forName(s);
         if (ModuleScript.class.isAssignableFrom(myClass)) {
-          ModuleScript instance = (ModuleScript) myClass.newInstance();
+          ModuleScript instance = (ModuleScript) myClass.getDeclaredConstructor().newInstance();
           instance.preExecute(getModulesVersionMap());
         }
       } catch (Exception e) {
