@@ -11,7 +11,7 @@
  * under the License. 
  * The Original Code is Openbravo ERP. 
  * The Initial Developer of the Original Code is Openbravo SLU 
- * All portions are Copyright (C) 2008-2010 Openbravo SLU 
+ * All portions are Copyright (C) 2008-2018 Openbravo SLU 
  * All Rights Reserved. 
  * Contributor(s):  ______________________________________.
  ************************************************************************
@@ -241,7 +241,7 @@ public class OBProvider {
 
       // instantiate the class
       try {
-        final Object value = instanceClass.newInstance();
+        final Object value = instanceClass.getDeclaredConstructor().newInstance();
         if (singleton) {
           theInstance = value;
         }
