@@ -11,7 +11,7 @@
  * under the License.
  * The Original Code is Openbravo ERP.
  * The Initial Developer of the Original Code is Openbravo SLU
- * All portions are Copyright (C) 2012-2017 Openbravo SLU
+ * All portions are Copyright (C) 2012-2018 Openbravo SLU
  * All Rights Reserved.
  * Contributor(s):  ______________________________________.
  *************************************************************************
@@ -497,7 +497,7 @@ public class CostingServer {
 
     try {
       final Class<?> clz = OBClassLoader.getInstance().loadClass(costAlgorithm.getJavaClassName());
-      CostingAlgorithm algorithm = (CostingAlgorithm) clz.newInstance();
+      CostingAlgorithm algorithm = (CostingAlgorithm) clz.getDeclaredConstructor().newInstance();
       algorithm.init(this);
       return algorithm;
     } catch (Exception e) {
