@@ -11,7 +11,7 @@
  * under the License.
  * The Original Code is Openbravo ERP.
  * The Initial Developer of the Original Code is Openbravo SLU
- * All portions are Copyright (C) 2010-2014 Openbravo SLU
+ * All portions are Copyright (C) 2010-2018 Openbravo SLU
  * All Rights Reserved.
  * Contributor(s):  ______________________________________.
  ************************************************************************
@@ -116,8 +116,8 @@ public class DocFINBankStatement extends AcctServer {
       }
       if (!strClassname.equals("")) {
         try {
-          DocFINBankStatementTemplate newTemplate = (DocFINBankStatementTemplate) Class.forName(
-              strClassname).newInstance();
+          DocFINBankStatementTemplate newTemplate = (DocFINBankStatementTemplate) Class
+              .forName(strClassname).getDeclaredConstructor().newInstance();
           return newTemplate.createFact(this, as, conn, con, vars);
         } catch (Exception e) {
           log4j.error("Error while creating new instance for DocFINBankStatementTemplate - " + e);
