@@ -11,7 +11,7 @@
  * under the License.
  * The Original Code is Openbravo ERP.
  * The Initial Developer of the Original Code is Openbravo SLU
- * All portions are Copyright (C) 2010-2017 Openbravo SLU
+ * All portions are Copyright (C) 2010-2018 Openbravo SLU
  * All Rights Reserved.
  * Contributor(s):  ______________________________________.
  ************************************************************************
@@ -368,7 +368,7 @@ public class DocFINPayment extends AcctServer {
       if (!strClassname.equals("")) {
         try {
           DocFINPaymentTemplate newTemplate = (DocFINPaymentTemplate) Class.forName(strClassname)
-              .newInstance();
+              .getDeclaredConstructor().newInstance();
           return newTemplate.createFact(this, as, conn, con, vars);
         } catch (Exception e) {
           docFINPaymentLog4j.error(
